# corgi

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  Readme.md  conanfile.txt
corgi/math/: CMakeLists.txt  Collisions.cpp  Collisions.h  MathUtils.cpp  MathUtils.h  Matrix.cpp  Matrix.h  Plane.h  Ray.cpp  Vec3.h  easing.h  rectanglef.h
corgi/math/UnitTests/: CMakeLists.txt  MathBenchmarks.cpp  UTCollisions.cpp  UTVector2f.cpp  UTVector3f.cpp
corgi/math/detail/: Vec3.h  Vec4.h
corgi/math/src/: CMakeLists.txt  Easing.cpp  Vec3.cpp
libs/components/: CMakeLists.txt
libs/components/include/corgi/components/: Animator.h  Behavior.h  BoxCollider.h  BoxCollider2D.h  CMakeLists.txt  Camera.h  ColliderComponent.h  MeshCollider.h  MeshRenderer.h  ParticleEmitter.h  RendererComponent.h  SpriteRenderer.h  StateMachine.h  TextRenderer.h  TilemapRenderer.h  Transform.h
libs/components/src/: Animator.cpp  Behavior.cpp  BoxCollider.cpp  BoxCollider2D.cpp  CMakeLists.txt  Camera.cpp  ColliderComponent.cpp  MeshCollider.cpp  MeshRenderer.cpp  ParticleEmitter.cpp  SpriteRenderer.cpp  StateMachine.cpp  TextRenderer.cpp  TilemapRenderer.cpp  Transform.cpp
libs/components/src/lights/: PointLight.h
libs/containers/tests/: CMakeLists.txt  Component.h
libs/containers/tests/unit/: CMakeLists.txt  EmptyTree.cpp  FilledTree.cpp  NodeTree.cpp  UTVector.cpp
libs/ecs/: CMakeLists.txt
libs/ecs/include/corgi/ecs/: Component.h  ComponentPool.h  ComponentPools.h  Entity.h  EntityId.h  RefEntity.h  Scene.h  String.h  System.h
libs/ecs/src/: CMakeLists.txt  Component.cpp  ComponentPools.cpp  Entity.cpp  RefEntity.cpp  Scene.cpp  String.cpp  System.cpp
libs/ecs/tests/: CMakeLists.txt  TestECS.cpp
libs/filesystem/: CMakeLists.txt
libs/filesystem/include/corgi/Ini/: Document.h  readme.md
libs/filesystem/include/corgi/filesystem/: FileSystem.h
libs/filesystem/src/: Document.cpp  FileSystem.cpp
libs/logger/: .gitignore  .travis.yml  CMakeLists.txt  README.md  install.bat
libs/logger/cmake/: config.cmake.in
libs/logger/include/corgi/logger/: CMakeLists.txt  log.h
libs/logger/src/: CMakeLists.txt  log.cpp
libs/logger/tests/: CMakeLists.txt
libs/logger/tests/src/: CMakeLists.txt  LoggerTest.cpp
libs/string/: CMakeLists.txt
libs/string/include/corgi/: CString.h  ShortString.h  SimpleString.h  String.h
libs/string/src/: CString.cpp  ShortString.cpp  SimpleString.cpp  String.cpp
libs/string/tests/unitTest/: CMakeLists.txt  UTCString.cpp  UTShortString.cpp  UTString.cpp  main.cpp
libs/test/: .travis.yml  CMakeLists.txt  LICENSE  README.md  install.bat
libs/test/cmake/: config.cmake.in
libs/test/doc/: Doxyfile
libs/test/include/corgi/test/: test.h
libs/test/test/: CMakeLists.txt  TestA.cpp  TestB.cpp  TestTime.cpp  main.cpp  test_fixture.cpp
libs/ui/: CMakeLists.txt
libs/ui/include/corgi/ui/: Animator.h  Button.h  CMakeLists.txt  Canvas.h  Checkbox.h  DialogWindow.h  Image.h  Panel.h  Rectangle.h  ScrollView.h  SimpleButton.h  Slider.h  StyleSheet.h  Text.h  TextBox.h  TextEnums.h  Ui.h  UiUtils.h  Widget.h  (+1 more)
libs/ui/src/: Animator.cpp  Button.cpp  CMakeLists.txt  Canvas.cpp  Checkbox.cpp  DialogWindow.cpp  Image.cpp  Panel.cpp  Rectangle.cpp  ScrollView.cpp  SimpleButton.cpp  Slider.cpp  StyleSheet.cpp  Text.cpp  TextBox.cpp  Ui.cpp  UiUtils.cpp  Widget.cpp  Window.cpp
libs/ui/src/dialogs/: FileDialog.cpp
libs/ui/src/layouts/: FlowLayout.cpp  GridLayout.cpp  VerticalLayout.cpp
libs/ui/src/menu/: MenuBar.cpp
libs/ui/test/: CMakeLists.txt  config.h.in
libs/ui/test/resources/: coders_crux.fnt  comic_sans.fconf  comic_sans.fnt  image.img
libs/ui/test/src/: Resources.h  TestUi.cpp
libs/utils/: CMakeLists.txt
libs/utils/src/: CMakeLists.txt  Debug.cpp
src/rendering/: AbstractRenderer.cpp  CMakeLists.txt  DrawList.cpp  FrameBuffer.cpp  Material.cpp  PostProcessing.cpp  RenderCommand.cpp  ShaderProgram.cpp  Sprite.cpp  VulkanRenderer.cpp  WindowDrawList.cpp  renderer.cpp  texture.cpp
src/rendering/gl/: GLUniformBufferObject.cpp
src/rendering/vulkan/: CMakeLists.txt  DepthBuffer.cpp  Image.cpp  ImageView.cpp  VulkanFramebuffer.cpp  VulkanMaterial.cpp  VulkanPipeline.cpp  VulkanShader.cpp  VulkanSwapchain.cpp  VulkanUniformBufferObject.cpp  VulkanVertexBuffer.cpp
tests/: CMakeLists.txt  WindowDrawListTest.cpp  main.cpp
tests/GLRenderer/: CMakeLists.txt  GLRendererMain.cpp
tests/benchmarks/: CMakeLists.txt
tests/benchmarks/resources/: majestic.img
tests/benchmarks/src/: CorgiBenchmarks.cpp  VectorBenchmark.h
tests/data_alignment/: CMakeLists.txt  DataAlignment.cpp
tests/dx12Renderer/: CMakeLists.txt
tests/dx12Renderer/src/: CMakeLists.txt  dx12RendererMain.cpp
tests/multithreading/: CMakeLists.txt  TestMultithreading.cpp
tests/resources_cache/: CMakeLists.txt  config.h.in
tests/resources_cache/src/: ResourcesCacheTests.cpp
tests/vulkanRenderer/: CMakeLists.txt  README.md
tests/vulkanRenderer/include/: Buffer.h  CMakeLists.txt  DepthBuffer.h  Framebuffer.h  Image.h  ImageView.h  IndexBuffer.h  Material.h  PhysicalDevice.h  Pipeline.h  RenderPass.h  Swapchain.h  Texture.h  UniformBufferObject.h  Vertex.h  VertexBuffer.h  VulkanConstants.h  VulkanRenderer.h
tests/vulkanRenderer/resources/: corgi.img  enemy.ani  enemy.anim  enemy.aseprite  enemy.img
tests/vulkanRenderer/shaders/: frag.spv  fragment_shader.frag  vert.spv  vertex_shader.vert
tests/vulkanRenderer/src/: CMakeLists.txt  DepthBuffer.cpp  Framebuffer.cpp  Image.cpp  ImageView.cpp  IndexBuffer.cpp  PhysicalDevice.cpp  Swapchain.cpp  UniformBufferObject.cpp  VertexBuffer.cpp  VulkanRenderer.cpp  vulkanRendererMain.cpp
tools/FontExporter/: CMakeLists.txt
tools/FontExporter/include/: FontLoader.h  stb_image.h  stb_image_write.h
tools/FontExporter/src/: CMakeLists.txt  FontExporter.cpp  FontLoader.cpp
tools/FontExporter/test/: CMakeLists.txt  config.h.in
tools/FontExporter/test/resources/: Roboto-Black.fconf  Roboto-Black.fnt  coders_crux.fconf  coders_crux.fnt  comic_sans.fconf  comic_sans.fnt
tools/FontExporter/test/src/: FontExporterTest.cpp
(+332 files in other folders)
